# libabits

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  cmake_install.cmake
src/include/: HString.hpp  libabits.h  libabits.hpp
src/tests/: libabits_tests.cpp
